--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h2> Registration Form </h2>
 
       <!--labels and inputs-->
-      <label><b>Name</b> &nbsp; <img src='images/Pen.png' alt="pencil" width="15"/></label>
+      <label><b>Name</b> &nbsp; <img src='images/pen.png' alt="pencil" width="15"/></label>
       <input type ="text" name="yourname" placeholder="Full name" required>
 
       <label><b>Address</b>&nbsp; <img src='images/address.png' alt="abc" width="15"/></label>
